Fixed date value.... again. Changed line-height to normal on all input fields for cross browser placeholder vertical alignment consistency

--- a/style.css
+++ b/style.css
@@ -126,6 +126,10 @@ body {
     text-align: center;
 }
 
+input {
+    line-height: normal;
+}
+
 input[type=submit]:focus,
 select:focus {
     outline: none;
@@ -193,7 +197,6 @@ input:focus {
     border: 1px solid rgb(238, 238, 238);
     color:rgb(60, 60, 60);
     padding-bottom: 0.6rem;
-    line-height: 100%;
 }
 
 .score-form input::placeholder,
